# euler_project

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  prob_1_25.rs  prob_26_50.rs  prob_51_75.rs  probs_1_20.rs  probs_1_25.rs  probs_1_50.rs  probs_21_40.rs
src/problems/: mod.rs
src/problems/group_1/: mod.rs  problem_1.rs  problem_10.rs  problem_11.rs  problem_12.rs  problem_13.rs  problem_14.rs  problem_15.rs  problem_16.rs  problem_17.rs  problem_18.rs  problem_19.rs  problem_2.rs  problem_20.rs  problem_21.rs  problem_22.rs  problem_23.rs  problem_24.rs  problem_25.rs  problem_3.rs  problem_4.rs  problem_5.rs  problem_6.rs  problem_7.rs  problem_8.rs  problem_9.rs
src/problems/group_10/: mod.rs
src/problems/group_15/: mod.rs  problem_357.rs
src/problems/group_2/: mod.rs  problem_26.rs  problem_27.rs  problem_28.rs  problem_29.rs  problem_30.rs  problem_31.rs  problem_32.rs  problem_33.rs  problem_34.rs  problem_35.rs  problem_36.rs  problem_37.rs  problem_38.rs  problem_39.rs  problem_40.rs  problem_41.rs  problem_42.rs  problem_43.rs  problem_44.rs  problem_45.rs  problem_46.rs  problem_47.rs  problem_48.rs  problem_49.rs  problem_50.rs
src/problems/group_29/: mod.rs  problem_700.rs  problem_719.rs
src/problems/group_3/: mod.rs  problem_51.rs  problem_52.rs  problem_53.rs  problem_54.rs  problem_55.rs  problem_56.rs  problem_57.rs  problem_58.rs  problem_59.rs  problem_60.rs  problem_61.rs  problem_62.rs  problem_63.rs  problem_64.rs  (+10 more)
src/utils/: file_ops.rs  fraction.rs  gaussian_integers.rs  math.rs  mod.rs  polynomial.rs  primes.rs
(+58 files in other folders)
