[package]
name = "euler_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
gcd = "2.3.0"
num-traits = "0.2.19"
tqdm = "0.7.0"
lazy_static = "1.5.0"
miller_rabin = "1.1.1"
multiset = "0.0.5"
bigint = "4.4.3"
